fix: adjust gap in about

--- a/shelter/style.css
+++ b/shelter/style.css
@@ -280,7 +280,7 @@ header {
 	display: flex;
 	flex-wrap: nowrap;
 	justify-content: center;
-	gap: 107px;
+	gap: 108px;
 }
 
 .about-content {
